styling: correct overflow on nav-menu

--- a/styles/style05.css
+++ b/styles/style05.css
@@ -108,7 +108,7 @@ nav {
 .nav-menu {
   position: absolute;
   top: -100%;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: rgb(184, 241, 255);
   display: flex;
@@ -192,13 +192,18 @@ main {
   padding-bottom: 1.9rem;
 }
 
-main h1 {
+.landing-text {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.landing-text h1 {
   text-transform: capitalize;
   font-size: 4.8rem;
   padding: 3.7rem 0 3rem 1.5rem;
 }
 
-main p {
+.landing-text p {
   font-size: 2rem;
   padding-left: 14.5rem;
   padding-right: 1.1rem;
@@ -281,6 +286,7 @@ main button {
 /* - SALES - */
 /* ----------------- */
 .section-sales {
+  margin-top: 2rem;
   margin-bottom: 6.6rem;
 }
 
@@ -366,14 +372,37 @@ footer span {
 /* ----------------- */
 /* - MEDIA QUERIES - */
 /* ----------------- */
+@media (min-width: 400px) {
+  .icon-arrow-left::before,
+  .icon-arrow-right::before {
+    font-size: 4.4rem;
+  }
+
+  .carousel-slide {
+    width: 55%;
+  }
+
+  .section-carousel h3 {
+    font-size: 2.5rem;
+  }
+}
+
 @media (min-width: 600px) {
   /* TABLET */
-  main h1 {
+  main {
+    padding-bottom: 3rem;
+  }
+
+  .landing-text {
+    max-width: 80%;
+  }
+
+  .landing-text h1 {
     padding: 3.7rem 0 3rem 5rem;
   }
 
-  main {
-    padding-bottom: 3rem;
+  .landing-text p {
+    padding-left: 22.5rem;
   }
 
   .carousel-slide {
@@ -407,5 +436,18 @@ footer span {
   }
   nav {
     height: 6rem;
+  }
+
+  .logo {
+    font-size: 2.5rem;
+  }
+
+  .landing-text {
+    max-width: 70%;
+  }
+
+  .landing-text p {
+    text-align: right;
+    padding-right: 5rem;
   }
 }
