--- a/styles/style06.css
+++ b/styles/style06.css
@@ -39,6 +39,7 @@ nav {
 
 .nav-wrapper {
   width: 80%;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -104,7 +105,7 @@ nav {
 .nav-menu {
   position: absolute;
   top: -100%;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: rgb(184, 241, 255);
   display: flex;
@@ -151,8 +152,7 @@ nav {
   nav {
     height: 6rem;
   }
-
-  .nav-wrapper {
-    height: 100%;
-  }
+  /* .logo {
+    font-size: 2.2rem;
+  } */
 }
